policies/deprecated-api-versions-policy/test_data/deprecated_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deprecated-ingress
spec:
  backend:
    serviceName: test
    servicePort: 80
