policies/deprecated-api-versions-policy/test_data/valid_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valid-ingress
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
